--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width">
     <!-- , initial-scale=1.0 -->
     <title>LLDemo</title>
-    <link rel="stylesheet" href="main.css">
-    <script type="module" src="scene.js"></script>
+    <link rel="stylesheet" href="./main.css">
+    <script type="module" src="./scene.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
 
 </head>
