Optimize scroll performance

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <section class="slide">
                 <div>
                     <h1>Virtual Tryon</h1>
-                    <p class="mobile-hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit vitae dui id mi. 
-                        Venenatis nisl pharetra dui, etiam sapien.
+                    <p class="mobile-hide">LessLens is a smart home trial app that allows you to try on and purchase your favorite glasses
+                         and sunglasses without leaving the comfort of your home. Choose from brand eyewear and discover 
+                         the perfect frames to fit any occasion. Look smart, act smart!
                     </p>
                     <small class="mobile-hide">powered by</small><br>
                     <img src="./img/arkit.png" class="arkit mobile-hide" alt="ARKit">
@@ -45,9 +46,11 @@
             <section class="slide">
                 <div>
                     <h1>Discover Your Perfect Glasses</h1>
-                    <p class="mobile-hide"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit vitae dui id mi. 
-                        Venenatis nisl pharetra dui, etiam sapien. 
-                    </p>
+                    <p class="mobile-hide">We use augmented reality (AR) to virtually 
+                        overlay different eyeglass and sunglasses models on your face. 
+                        Get live experience on-screen with no need to scan your face or take any photos.</p>
+                    <p class="mobile-hide">Discover fashion inspiration, explore various shapes, choose colors and 
+                        try them on as you would in real life with our virtual try-on feature.</p>
                 </div>
             </section>
             <section class="slide white">
