Update SEO tags

--- a/index.html
+++ b/index.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <title>LLDemo</title>
+    <title>LessLens - Discover a new way to choose glasses</title>
+    <meta property="og:title" content="LessLens - Discover a new way to choose glasses">
+    <meta property="og:type" content="product">
+    <meta property="og:site_name" content="LessLens">
+    <meta name="twitter:site" content="@less-lens">
+    <meta name="twitter:creator" content="@less-lens">
+    <meta property="og:url" content="https://lesslens.com/">
+
+    <meta property="og:url" content="https://lesslens.com/">
+    <meta property="og:description" content="LessLens is a smart home trial app that allows you to try on and purchase your favorite glasses and sunglasses without leaving the comfort of your home.">
+    <meta name="description" content="LessLens is a smart home trial app that allows you to try on and purchase your favorite glasses and sunglasses without leaving the comfort of your home.">
+
     <link rel="stylesheet" href="./main.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+    <link rel="canonical" href="https://lesslens.com/">
+
     <script type="module" src="./scene.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
-
 </head>
 <body>
     <header class="indent bury">
         <img src="./img/logo.svg" alt="logo" class="logo-icon">
         <div class="logo-title">LESS LENS</div>
-        <a id="download" href="https://apps.apple.com/us/app/lesslens-glasses-sunglasses/id1535675035"><img src="./img/appstore.svg" alt="Download"></a>
+        <a id="download" href="https://apps.apple.com/app/apple-store/id1535675035?pt=122143363&ct=landing&mt=8"><img src="./img/appstore.svg" alt="Download"></a>
         
    </header>
 
@@ -34,7 +50,7 @@
         <div id="slider" class="indent bury">
             <section id="tryon" class="slide">
                 <div>
-                    <h1>Virtual Tryon</h1>
+                    <h1>Virtual Try-on</h1>
                     <p class="mobile-hide">LessLens is a smart home trial app that allows you to try on and purchase your favorite glasses
                          and sunglasses without leaving the comfort of your home. Choose from brand eyewear and discover 
                          the perfect frames to fit any occasion. Look smart, act smart!
@@ -44,7 +60,7 @@
             </section>
             <section id="discover" class="slide">
                 <div>
-                    <h1>Discover Your Perfect Glasses</h1>
+                    <h2>Discover Your Perfect Glasses</h2>
                     <p class="mobile-hide">We use augmented reality (AR) to virtually 
                         overlay different eyeglass and sunglasses models on your face. 
                         Get live experience on-screen with no need to scan your face or take any photos.</p>
@@ -54,7 +70,7 @@
             </section>
             <section id="explore" class="slide white">
                 <div>
-                    <h1>Explore Options</h1>
+                    <h2>Explore Options</h2>
                     <hr class="mobile-hide">
                     <div class="brands mobile-hide">
                         <img src="./img/rayban-logo.svg" class="brand" alt="Ray-Ban">
@@ -77,9 +93,8 @@
             </section>
             <section id="shopping" class="slide">
                 <div>
-                    <h1>Easy Shopping</h1>
-                    <p class="mobile-hide">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit vitae dui id mi. 
-                        Venenatis nisl pharetra dui, etiam sapien.</p>
+                    <h2>Easy Shopping</h2>
+                    <p class="mobile-hide">Shop for any glasses and sunglasses at LessLens, Starting at just $9. See our huge selection of options eyewear in our mobile app.</p>
                 </div>
             </section>
         </div>
@@ -89,10 +104,16 @@
     <footer class="indent bury">
         <div class="mobile-hide">&#169; LessLens inc. <script>document.write(/\d{4}/.exec(Date())[0])</script></div>
         <a href="legal.html" target="_blank">Privacy Policy</a>
-        <a href="https://www.instagram.com/less.lens/" data-feather="instagram"></a>
-        <a href="" data-feather="twitter"></a>
-        <a href="" data-feather="facebook"></a>
-        <a href="mailto:info@lesslens.com" data-feather="mail"> </a>
+        <a href="https://www.instagram.com/less.lens/"> 
+            <i data-feather="instagram"></i>
+        </a>
+        <a href="https://twitter.com/lens_less">
+            <i data-feather="twitter"></i>
+        </a>
+        <!-- <a href="" data-feather="facebook"></a> -->
+        <a href="mailto:info@lesslens.com">
+            <i data-feather="mail"></i>
+        </a>
     </footer>
 
     <div id="load-screen">
