Add local icons and clean up

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
     <link rel="canonical" href="https://lesslens.com/">
 
     <script type="module" src="./scene.js"></script>
-    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
-    <header class="indent bury">
+    <header class="indent">
         <img src="./img/logo.svg" alt="logo" class="logo-icon">
         <div class="logo-title">LESS LENS</div>
         <a id="download" href="https://apps.apple.com/app/apple-store/id1535675035?pt=122143363&ct=landing&mt=8"><img src="./img/appstore.svg" alt="Download"></a>
@@ -101,19 +100,14 @@
 
     </div>    
       
-    <footer class="indent bury">
+    <footer class="indent">
         <div class="mobile-hide">&#169; LessLens inc. <script>document.write(/\d{4}/.exec(Date())[0])</script></div>
         <a href="legal.html" target="_blank">Privacy Policy</a>
-        <a href="https://www.instagram.com/less.lens/"> 
-            <i data-feather="instagram"></i>
-        </a>
-        <a href="https://twitter.com/lens_less">
-            <i data-feather="twitter"></i>
-        </a>
-        <!-- <a href="" data-feather="facebook"></a> -->
-        <a href="mailto:info@lesslens.com">
-            <i data-feather="mail"></i>
-        </a>
+
+        <a href="https://www.instagram.com/less.lens/" target="_blank"><img src="./img/instagram.svg"></a>
+        <a href="https://twitter.com/lens_less" target="_blank"><img src="./img/twitter.svg"></a>
+        <!-- <a href="" data-feather="facebook" target="_blank"><img src="./img/facebook.svg"></a> -->
+        <a href="mailto:info@lesslens.com"><img src="./img/mail.svg"></a>
     </footer>
 
     <div id="load-screen">
@@ -122,9 +116,8 @@
         <div class="loader-bg">
             <div id="progress"></div>
         </div>
-        <span id="counter">1%</span>
+        <span id="counter">0%</span>
     </div>
 
-    <script>feather.replace() </script>
 </body>
 </html>
