Rename Privacy Policy page & update meta tags

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       
     <footer class="indent">
         <div class="mobile-hide">&#169; LessLens inc. <script>document.write(/\d{4}/.exec(Date())[0])</script></div>
-        <a href="legal.html" target="_blank">Privacy Policy</a>
+        <a href="privacy.html" target="_blank">Privacy Policy</a>
 
         <a href="https://www.instagram.com/less.lens/" target="_blank"><img src="./img/instagram.svg"></a>
         <a href="https://twitter.com/lens_less" target="_blank"><img src="./img/twitter.svg"></a>
