--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="main.css">
+    <title>Privacy Policy | LessLens</title>
+    <meta property="og:description" content="Privacy Policy | LessLens. LessLens is a smart home trial app that allows you to try on and purchase your favorite glasses and sunglasses without leaving the comfort of your home.">
+    <meta name="description" content="Privacy Policy | LessLens. LessLens is a smart home trial app that allows you to try on and purchase your favorite glasses and sunglasses without leaving the comfort of your home.">
 </head>
 <body>
     <div class="indent">
@@ -42,7 +45,7 @@
         <p>You can request the deletion of your data at any time by contacting us by <a href="mailto:info@lesslens.com">email</a>.</p>
         
         <h3>Contact Us</h3>
-        <p>If you have questions or concerns about data privacy, you can also contact us by email at <a href="mailto:info@lesslens.com">support@lesslens.com</a>.</p>
+        <p>If you have questions or concerns about data privacy, you can also contact us by email at <a href="mailto:support@lesslens.com">support@lesslens.com</a>.</p>
 
     </div>
 </body>
