--- a/privacy.html
+++ b/privacy.html
@@ -7,8 +7,19 @@
     <title>Privacy Policy | LessLens</title>
     <meta property="og:description" content="Privacy Policy | LessLens. LessLens is a smart home trial app that allows you to try on and purchase your favorite glasses and sunglasses without leaving the comfort of your home.">
     <meta name="description" content="Privacy Policy | LessLens. LessLens is a smart home trial app that allows you to try on and purchase your favorite glasses and sunglasses without leaving the comfort of your home.">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TWQFHL3');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TWQFHL3"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="indent">
         <h1>Privacy Policy</h1>
 
