--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<a id="ar-link" rel="ar" href="./demo/test.reality#allowsContentScaling=1
+<a id="ar-link" rel="ar" href="./demo/model.reality#allowsContentScaling=1
 &custom=https://www.lesslens.com/demo/banner.html
 &customHeight=small
 &canonicalWebPageURL=https://www.lesslens.com/demo.html"  >
