--- a/demo/banner.html
+++ b/demo/banner.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
+    <title>Banner</title>
+     <style>
         @import url('http://fonts.cdnfonts.com/css/sf-pro-display');
         body {
             margin: 0;
