--- a/demo/banner.html
+++ b/demo/banner.html
@@ -8,7 +8,9 @@
      <style>
         @import url('http://fonts.cdnfonts.com/css/sf-pro-display');
         body {
-            margin: 0;
+            width: 100%;
+            height: 100%;
+            margin: 0, 16px;
             display: flex;
             flex-direction: row;
             align-items: center;
