--- a/demo/banner.html
+++ b/demo/banner.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width">
     <title>Banner</title>
      <style>
@@ -27,7 +27,7 @@
         h6   {
             font-family: 'SF Pro Display', sans-serif;;
             font-style: normal;
-            font-weight: 400;
+            font-weight: 600;
             font-size: 16px;
             line-height: 21px;
             letter-spacing: -0.32px;
@@ -50,7 +50,7 @@
 
     <div class="block">
         <h6>More models in LessLens app</h6>
-        <p>Some description tag</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
     </div>
     <svg width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M13.8838 35.204V39.5527C18.5334 38.454 23.4898 38.3032 29.3789 39.3794C28.6527 43.1211 27.3201 45.8089 25.2631 48.2988C24.5155 49.2029 24.6466 50.5407 25.5551 51.2844C26.4627 52.0282 27.8074 51.8979 28.5541 50.9938C31.0258 48.003 32.6569 45.1773 33.5403 40.6955C33.6965 39.9007 34.3856 39.569 35.0337 39.569C35.0337 36.9161 35.0309 36.7265 35.0309 36.0178C26.936 33.9339 19.9831 33.9175 13.8838 35.204Z" fill="#56BA8D"/>
