--- a/demo/banner.html
+++ b/demo/banner.html
@@ -10,7 +10,8 @@
         body {
             width: 100%;
             height: 100%;
-            margin: 0, 16px;
+            margin: 0;
+            padding: 0, 24px;
             display: flex;
             flex-direction: row;
             align-items: center;
