Add new demo model

--- a/demo.html
+++ b/demo.html
@@ -12,16 +12,16 @@
 </head>
 <body>
 
-
-<a id="ar-link" rel="ar" href="./demo/model.reality#allowsContentScaling=1
+<div class="card">
+    <a id="ar-link" rel="ar" href="./demo/111.reality#allowsContentScaling=1
 &custom=https://www.lesslens.com/demo/banner.html
 &customHeight=small
 &canonicalWebPageURL=https://www.lesslens.com/demo.html"  >
-    <img id="img" src="./demo/model.png" alt="glasses">
+    <img id="img" src="./demo/111.jpeg" alt="glasses">
 </a>
-    
 
-<!-- <div id="vr"></div> -->
+</div>
+
 
 <script>
     const linkElement = document.getElementById("ar-link");
